--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "effective-2",
   "version": "1.0.0",
   "main": "src/app.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.ts",
