--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/app.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.ts",
+    "build": "tsc",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
   "keywords": [],
