--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "effective-2",
   "version": "1.0.0",
   "main": "src/app.ts",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon dist/app.ts"
   },
   "keywords": [],
   "author": "",
